# just-lsp

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  justfile  run  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml  ci.yml  release.yaml  web.yaml
crates/just-lsp-analysis/: Cargo.toml
crates/just-lsp-analysis/src/: lib.rs
crates/just-lsp-analyzer/: Cargo.toml
crates/just-lsp-analyzer/src/: lib.rs  rule.rs  rule_context.rs
crates/just-lsp-analyzer/src/rule/: attribute_arguments.rs  attribute_invalid_target.rs  attribute_target_support.rs  dependency_arguments.rs  duplicate_recipes.rs  invalid_setting_kind.rs  undefined_identifiers.rs  unknown_function.rs  unused_parameters.rs  unused_variables.rs
crates/just-lsp-builtins/: Cargo.toml
crates/just-lsp-builtins/src/: lib.rs
crates/just-lsp-changelog/: Cargo.toml
crates/just-lsp-changelog/src/: main.rs
crates/just-lsp-document/: Cargo.toml  build.rs
crates/just-lsp-document/src/: error.rs  lib.rs  node_ext.rs  point_ext.rs
crates/just-lsp-resolver/: Cargo.toml
crates/just-lsp-resolver/src/: lib.rs
crates/just-lsp-rope-ext/: Cargo.toml
crates/just-lsp-rope-ext/src/: lib.rs
crates/just-lsp-types/: Cargo.toml
crates/just-lsp-types/src/: alias.rs  attribute.rs  attribute_target.rs  builtin.rs  dependency.rs  function_call.rs  group.rs  lib.rs  parameter.rs  recipe.rs  setting.rs  text_node.rs  variable.rs
crates/just-lsp-wasm/: Cargo.toml
crates/just-lsp-wasm/src/: lib.rs
crates/update-contributors/: Cargo.toml
crates/update-contributors/src/: main.rs
docs/: diagnostics.md
queries/: highlights.scm  locals.scm
src/: alias.rs  analyzer.rs  arguments.rs  attribute.rs  attribute_kind.rs  attribute_target.rs  builtin.rs  builtins.rs  capabilities.rs  command.rs  common.rs  config.rs  constant.rs  constants.rs  count.rs  dependency.rs  dependency_argument.rs  dependency_phase.rs  deprecation.rs  diagnostic.rs  document.rs  error.rs  function.rs  function_call.rs  function_kind.rs  group.rs  import.rs  import_resolver.rs  language_server.rs  lib.rs  main.rs  message.rs  module.rs  node_ext.rs  os_group.rs  parameter.rs  point_ext.rs  position_ext.rs  quickfix.rs  quickfixer.rs  (+19 more)
src/rule/: alias_recipe_conflict.rs  aliases.rs  arg_attribute.rs  attribute_argument_expressions.rs  attribute_arguments.rs  attribute_invalid_target.rs  attribute_target_support.rs  attributes.rs  cache_attribute.rs  cache_without_script.rs  dependency_arguments.rs  deprecated_function.rs  deprecated_setting.rs  dotenv_path_filename_conflict.rs  duplicate_alias.rs  duplicate_attribute.rs  duplicate_default_attribute.rs  duplicate_dependencies.rs  duplicate_function.rs  duplicate_module.rs  duplicate_recipes.rs  duplicate_setting.rs  duplicate_unexports.rs  duplicate_variables.rs  exit_message_conflict.rs  export_unexport_conflict.rs  extension_without_script.rs  function_arguments.rs  function_calls.rs  function_parameters.rs  inconsistent_indentation.rs  invalid_import_path.rs  invalid_setting_kind.rs  invalid_setting_value.rs  list_features.rs  mapped_dependencies.rs  missing_dependencies.rs  missing_recipe_for_alias.rs  mixed_indentation.rs  parallel_dependencies.rs  (+13 more)
src/subcommand/: analyze.rs
tests/: integration.rs
vsc-extension/: CHANGELOG.md  README.md  package.json  test.just
vsc-extension/src/: extension.ts
www/: .eslintrc.cjs  .prettierignore  index.html  justfile  package.json  vite.config.ts
www/.github/workflows/: ci.yaml
www/public/: tree-sitter-just.wasm  tree-sitter-php.wasm
www/src/: App.tsx  index.css  main.tsx
www/src/components/: about-dialog.tsx  editor-pane.tsx  editor-settings-dialog.tsx  editor.tsx  tree-node.tsx  tree-pane.tsx
www/src/components/ui/: badge-variants.ts  badge.tsx  button-variants.ts  button.tsx  card.tsx  dialog.tsx  label.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  switch.tsx  tabs.tsx  tooltip.tsx
www/src/contexts/: editor-settings-context.ts
www/src/hooks/: use-editor-extensions.tsx  use-media-query.tsx  use-persisted-doc.tsx  use-persisted-state.tsx  use-stacked-layout.tsx  use-syntax-tree.tsx  use-tree-sitter.tsx
www/src/lib/: base16-seti-theme.ts  cm-highlight-extension.ts  grammar.test.ts  just-syntax-highlighting.ts  types.ts  utils.test.ts  utils.ts
www/src/providers/: editor-settings-provider.tsx
