[package]
name = "just-lsp"
version = "0.4.5"
description = "A language server for just"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/just-lsp"
repository = "https://github.com/terror/just-lsp"
edition = "2024"
exclude = ["/screenshot.png", "/www"]
categories = ["development-tools"]
keywords = ["productivity", "compilers", "language-servers", "just", "tree-sitter"]
resolver = "2"

include = [
  "/LICENSE",
  "/README.md",
  "/build.rs",
  "/src/",
  "/queries/**",
  "/vendor/*-src/**.c",
  "/vendor/*-src/**/**.h"
]

[workspace]
members = [".", "crates/*"]

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
too_many_lines = "allow"
wildcard_imports = "allow"

[lints]
workspace = true

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0.102"
ariadne = "0.6.0"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
indoc = "2.0.7"
inventory = "0.3"
log = "0.4.30"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
target = "2.1.0"
tempfile = "3.27.0"
thiserror = "2"
tokio = { version = "1.52.3", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tower-lsp = "0.20.0"
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.8"
yansi = "1.0.1"

[dev-dependencies]
executable-path = "1.0.1"
pretty_assertions = "1.4.1"
serde_json = "1.0.150"
tower-test = "0.4.0"

[build-dependencies]
cc = "1.2.62"
