[package]
name = "just-lsp-document"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
just-lsp-rope-ext = { workspace = true }
just-lsp-types = { workspace = true }
ropey = { workspace = true }
thiserror = "2.0.17"
tower-lsp = { workspace = true }
tree-sitter = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }

[build-dependencies]
cc = "1.2.31"
