[package]
name = "just-lsp-wasm"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
just-lsp = { path = "../.." }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tower-lsp = { workspace = true }
typeshare = "1.0.5"
wasm-bindgen = "0.2.118"
